syntax = "proto3";
package venture;

// Go-specific options
option go_package = "github.com/bloodmagesoftware/venture/proto/level";

message LevelData {
  // Store ALL nodes here in a flat list
  repeated BSPNode nodes = 1;
  // Index of the root node in the list above (-1 for empty tree)
  int32 root_index = 2;
  // Ground tiles for visual rendering
  repeated Tile ground = 3;
}

message BSPNode {
  // A node is strictly one of these two things.
  oneof type {
    Split split = 1;
    Leaf leaf = 2;
  }
}

message Split {
  // The Plane (Line in 2D): Normal * Point = Distance
  float normal_x = 1;
  float normal_y = 2;
  float distance = 3;

  // Instead of nesting, point to the index in the 'nodes' array
  int32 front_index = 4;
  int32 back_index = 5;
}

message Leaf {
  // The actual content index (e.g., sector ID, polygons)
  int32 sector_id = 1;
  repeated int32 polygon_indices = 2;
  bool is_solid = 3;
}

message Vec2i {
  int32 x = 1;
  int32 y = 2;
}

message Tile {
  Vec2i position = 1;
  string texture = 2;
}
